<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_Email"
        android:orderInCategory="200"
        android:title="@string/emus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Contact"
        android:orderInCategory="300"
        android:title="@string/conus"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/refresh"
        app:showAsAction="ifRoom"
        android:title="@string/rfrsh"
        android:orderInCategory="100"
        android:id="@+id/refresh"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="200"
        android:icon="@drawable/share"
        app:showAsAction="always" />
</menu>
